--- a/docroot/sites/all/themes/bootstrap_subtheme/less/overrides.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/overrides.less
@@ -649,3 +649,8 @@ table {
 .alert-danger a {
   color: darken(@alert-danger-text, 10%);
 }
+
+.navbar-default {
+  background: none;
+  border: none;
+}
