Change base typography

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/content.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/content.less
@@ -1,1 +1,5 @@
-// Insert your styling here.
+body {
+  font-family: "PFDin TextCondPro", "Arial", sans-serif;
+  font-weight: 200;
+  color: 000;
+}
