--- a/docroot/sites/all/themes/bootstrap_subtheme/less/content.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/content.less
@@ -1,5 +1,7 @@
 body {
   font-family: "PFDin TextCondPro", "Arial", sans-serif;
   font-weight: 200;
-  color: 000;
+  font-size: 18px;
+  color: #000;
+
 }
