Change site background

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/content.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/content.less
@@ -3,7 +3,12 @@ body {
   font-weight: 200;
   font-size: 18px;
   color: #000;
+  line-height: 23px;
   p {
     line-height: 23px;
   }
+  background-color: #f7f8f8;
+  background-image: url("../images/bg-image.png");
+  background-position: right top;
+  background-repeat: no-repeat;
 }
