Change headers styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/overrides.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/overrides.less
@@ -649,3 +649,24 @@ table {
 .alert-danger a {
   color: darken(@alert-danger-text, 10%);
 }
+
+body {
+  font-family: "PFDin TextCondPro", "Arial", sans-serif;
+  font-weight: 200;
+  font-size: 18px;
+  color: #000;
+  line-height: 23px;
+  p {
+    line-height: 23px;
+  }
+  background-color: #f7f8f8;
+  background-image: url("../images/bg-image.png");
+  background-position: right top;
+  background-repeat: no-repeat;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "PFDin TextCondPro", "Arial", sans-serif;
+  font-weight: 400;
+  line-height: 25;
+}
