--- a/docroot/sites/all/themes/bootstrap_subtheme/less/overrides.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/overrides.less
@@ -668,5 +668,5 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: "PFDin TextCondPro", "Arial", sans-serif;
   font-weight: 400;
-  line-height: 25;
+  line-height: 25px;
 }
