Change site name styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -3,4 +3,12 @@
 .navbar-default {
   background: none;
   border: none;
+  #site-name {
+    color: #00adef;
+    text-transform: uppercase;
+    font-weight: 200;
+    span {
+      font-weight: 400;
+    }
+  }
 }
