--- a/docroot/sites/all/themes/bootstrap_subtheme/less/overrides.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/overrides.less
@@ -670,3 +670,12 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   line-height: 25px;
 }
+
+a {
+  color: #00adef;
+  text-decoration: underline;
+  &:hover {
+   text-decoration: none;
+   color: #00adef;
+  }
+}
