Change site name styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -7,7 +7,7 @@
     color: #00adef;
     text-transform: uppercase;
     font-weight: 200;
-    span {
+    strong {
       font-weight: 400;
     }
   }
