--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -7,6 +7,7 @@
     color: #00adef;
     text-transform: uppercase;
     font-weight: 200;
+    font-size: 41px;
     strong {
       font-weight: 400;
     }
