Change site name styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -3,11 +3,15 @@
 .navbar-default {
   background: none;
   border: none;
+  padding-top: 35px;
   #site-name {
     color: #00adef;
     text-transform: uppercase;
     font-weight: 200;
     font-size: 41px;
+    a {
+      text-decoration: none;
+    }
     strong {
       font-weight: 400;
     }
