Change site name styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -11,9 +11,7 @@
     color: #00adef;
     text-transform: uppercase;
     font-weight: 200;
-    font-size: 56px;
-    strong {
-      font-weight: 400;
-    }
+    font-size: 54px;
+    line-height: 58px;
   }
 }
