Change site logo styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -16,7 +16,14 @@
     margin-top: -7px;
   }
   #site-slogan {
-    display: block;
+    color: #003e80;
+    display: inline-block;
+    font-size: 13px;
+    font-weight: bold;
+    line-height: 1.2em;
+    margin-top: 34px;
+    text-align: right;
+    text-transform: uppercase;
     width: 95px;
   }
 }
