--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -25,5 +25,8 @@
     text-align: right;
     text-transform: uppercase;
     width: 95px;
+    .slogan-big {
+      font-size: 20px;
+    }
   }
 }
