--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -26,7 +26,11 @@
     text-transform: uppercase;
     width: 95px;
     .slogan-big {
-      font-size: 20px;
+      font-size: 29px;
+      line-height: 29px;
+    }
+    .slogan-small {
+      font-size: 11px;
     }
   }
 }
