Change site logo styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -15,6 +15,9 @@
     line-height: 58px;
     margin-top: -7px;
   }
+  .logo-container {
+    border-right: #003e80 5px solid;
+  }
   #site-slogan {
     color: #003e80;
     display: inline-block;
@@ -27,7 +30,7 @@
     width: 95px;
     .slogan-big {
       font-size: 29px;
-      line-height: 29px;
+      line-height: 24px;
     }
     .slogan-small {
       font-size: 11px;
