Change site logo styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -3,7 +3,7 @@
 .navbar-default {
   background: none;
   border: none;
-  padding-top: 35px;
+  padding-top: 12px;
   a {
     text-decoration: none;
   }
@@ -13,7 +13,7 @@
     font-weight: 200;
     font-size: 54px;
     line-height: 58px;
-    margin-top: -7px;
+    margin-top: 16px;
   }
   #site-slogan {
     color: #003e80;
@@ -37,8 +37,8 @@
       content: '';
       display: block;
       position: absolute;
-      right: 0;
-      height: 100%;
+      right: -18px;
+      height: 94%;
       width: 5px;
       background: #003e80;
     }
