Change site logo styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -38,6 +38,7 @@
       display: block;
       position: absolute;
       right: -18px;
+      top: 0;
       height: 94%;
       width: 5px;
       background: #003e80;
