--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -44,4 +44,13 @@
       background: #003e80;
     }
   }
+  .menu {
+    float: left;
+    position: relative;
+    left: 50%;
+    li {
+      position: relative;
+      left: -50%;
+    }
+  }
 }
