Change main menu styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -53,7 +53,13 @@
       left: -50%;
       a {
         background-position: top;
-
+        padding-top: 50px;
+        text-transform: uppercase;
+        text-decoration: underline;
+        color: #00adef;
+        &:hover {
+          text-decoration: none;
+        }
       }
     }
   }
