Change main menu styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -48,12 +48,14 @@
     float: left;
     position: relative;
     left: 50%;
+    margin-top: 15px;
     li {
       position: relative;
       left: -50%;
+      margin-right: 10px;
       a {
         background-position: top;
-        padding-top: 50px;
+        padding-top: 55px;
         text-transform: uppercase;
         text-decoration: underline;
         color: #00adef;
