--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -48,11 +48,12 @@
     float: left;
     position: relative;
     left: 50%;
-    margin-top: 15px;
     li {
       position: relative;
       left: -50%;
       margin-right: 10px;
+      margin-top: 15px;
+      text-align: center;
       a {
         background-position: top;
         padding-top: 55px;
