Change main menu styles

--- a/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
+++ b/docroot/sites/all/themes/bootstrap_subtheme/less/header.less
@@ -62,6 +62,7 @@
         color: #00adef;
         &:hover {
           text-decoration: none;
+          color: #00adef;
         }
       }
     }
